Partial Translation of Verb "Take"
- ADD TO EVERY ENTITY IS NOT femminile. (because Italian has no neuter)
- Verb "take" has been partially translated
- Specific check message for verb "take" added (because Italian uses infinitive form)
- Added `verbi.alan` and commands script to test verbs.

--- a/.gitattributes
+++ b/.gitattributes
@@ -21,6 +21,12 @@
 *.i        text
 *.ifid     text
 
+## ===================
+## Game Scripts & Logs
+## ===================
+*.log      text
+*.script   text
+
 ## =============
 ## AlanIDE Files
 ## =============
