--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,8 @@
 # https://github.com/tajmone/Alan3-Italian                                     #
 ################################################################################
 
+
+*.tmp
 ## ==========
 ## Alan Files
 ## ==========
