--- a/.gitattributes
+++ b/.gitattributes
@@ -26,7 +26,8 @@
 ## Game Scripts & Logs
 ## ===================
 *.log      text
-*.script   text
+*.a3log    text
+*.a3sol    text
 
 ## =============
 ## AlanIDE Files
