--- a/.gitattributes
+++ b/.gitattributes
@@ -56,6 +56,11 @@
 *.yaml     text
 *.yml      text
 
+## ==================
+## ADOC-RELATED FILES
+## ==================
+*.haml     text
+
 ## =================
 ## WEB-RELATED FILES
 ## =================
