Cartella Per Sviluppo Test
Aggiungi la nuova cartella `/test/_temp-dev/` destinata allo sviluppo
locale di nuovi test. Le avventure (e relativi script) in questa cartella
saranno ignorati da Git e non verranno inclusi nel repository.

--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,12 @@
 *.ifid
 *.log
 *.sav
-!test/vari/comandi-partita_arun-diverso.sav
+!/test/vari/comandi-partita_arun-diverso.sav
+
+# Escludi i test per lo sviluppo locale:
+/test/_temp-dev/*.a3log
+/test/_temp-dev/*.a3sol
+/test/_temp-dev/*.alan
 
 ## =============
 ## AlanIDE Files
