--- a/.gitattributes
+++ b/.gitattributes
@@ -90,11 +90,11 @@ LICENSE      text
 *.config       text
 *.ini          text
 *.prefs        text
-.editorconfig  text
+.editorconfig  text eol=lf
 .gitattributes text
 .gitconfig     text
 .gitignore     text
-.gitmodules    text
+.gitmodules    text eol=lf
 
 ## ========
 ## ARCHIVES
